--- a/README
+++ b/README
@@ -1,23 +1,23 @@
 #############################
- __  __            _   ___  
- \ \/ /___ _ __   / | / _ \ 
-  \  // _ \ '_ \  | || | | |
-  /  \  __/ | | | | || |_| |
- /_/\_\___|_| |_| |_(_)___/ 
-                                                   
+ __  __            _   ____  
+ \ \/ /___ _ __   / | |___ \ 
+  \  // _ \ '_ \  | |   __) |
+  /  \  __/ | | | | |_ / __/ 
+ /_/\_\___|_| |_| |_(_)_____|
+                                              
 #############################
 
 University of Cambridge Computer Laboratory
-31 Aug 2003
+30 Jan 2004
 
 http://www.cl.cam.ac.uk/netos/xen
 
 About the Xen Virtual Machine Monitor
 =====================================
 
-"Xen" is a Virtual Machine Monitor (VMM) developed by the Systems
-Research Group of the University of Cambridge Computer Laboratory, as
-part of the UK-EPSRC funded XenoServers project.
+"Xen" is a Virtual Machine Monitor (VMM) originally developed by the
+Systems Research Group of the University of Cambridge Computer
+Laboratory, as part of the UK-EPSRC funded XenoServers project. 
 
 The XenoServers project aims to provide a "public infrastructure for
 global distributed computing", and Xen plays a key part in that,
@@ -54,7 +54,7 @@ tricky to handle. A good description of Xen's design, implementation
 and performance is contained in our October 2003 SOSP paper, available
 at http://www.cl.cam.ac.uk/netos/papers/2003-xensosp.pdf
 
-We have been working on porting 3 different operating systems to run
+We have worked on porting 3 different operating systems to run
 on Xen: Linux 2.4, Windows XP, and NetBSD.
 
 The Linux 2.4 port (currently Linux 2.4.22) works very well -- we
@@ -65,10 +65,10 @@ tried.  We refer to our version of Linux ported to run on Xen as
 virtual CPU architecture that we call xeno-x86 (abbreviated to just
 "xeno").
 
-Unfortunately, the NetBSD port has stalled due to lack of man
-power. We believe most of the hard stuff has already been done, and
-are hoping to get the ball rolling again soon. In hindsight, a FreeBSD
-4 port might have been more useful to the community. Any volunteers? :-)
+NetBSD has been ported to Xen by Christian Limpach, and will hopefully
+soon become part of the standard release. Work on a FreeBSD port has
+been started by Kip Macy, and we hope to see this complete for the 1.3
+release.
 
 The Windows XP port is nearly finished. It's running user space
 applications and is generally in pretty good shape thanks to some hard
@@ -134,26 +134,32 @@ recommended since they require extra packet copies.
 Building Xen and XenoLinux
 ==========================
 
-The public master BK repository for the 1.0 release lives at: 
-bk://xen.bkbits.net/xeno-1.0.bk
+The public master BK repository for the 1.2 release lives at: 
+bk://xen.bkbits.net/xeno-1.2.bk
 
 To fetch a local copy, install the BitKeeper tools, then run: 
-'bk clone bk://xen.bkbits.net/xeno-1.0.bk'
+'bk clone bk://xen.bkbits.net/xeno-1.2.bk'
 
 To see how to build Xen, Xenolinux, and all the control tools, inspect
-the tools/misc/xen-clone script in the BK repository. This script can
-be used to clone the repostitory and perform a full build.
+the tools/misc/xen-clone script in the BK repository (also available
+via http://www.cl.cam.ac.uk/netos/xen/readmes/xen-clone). This script
+can be used to clone the repository and perform a full build.
 
 The build procedure for xenolinux is slightly complicated as its done
 by running the 'mkbuildtree' script over a pristine Linux tree to turn
 it into a xenolinux tree by adding the 'xeno' architecture.
 
-There's also a pre-built source tree on the project downloads page.
+There's also a recent pre-built source tree on the project downloads
+page: http://www.cl.cam.ac.uk/netos/xen/downloads/xeno-1.2.tar.gz
 
 
 Using the domain control tools
 ==============================
 
-See example Python scripts in tools/examples/
+README.CD contains some example invocations.
 
-Further documentation is in docs/ (e.g., docs/Xeno-HOWTO).
+See example Python scripts in tools/examples/ and the associated README.
+
+Further documentation is in docs/ (e.g., docs/Xeno-HOWTO), and also in
+
+
