bitkeeper revision 1.784 (4050c414tIvxGfQ8IUNIXoAjpoXBVA)
Updated script names and added man pages for all the xentrace tools.

--- a/docs/interface.tex
+++ b/docs/interface.tex
@@ -432,10 +432,11 @@ for machines with multiple (logical) CPUs, the trace buffer output will not be
 in overall chronological order.
 
 The output from {\tt xentrace} can be post-processed using {\tt
-xentrace\_split.py} (used to split trace data out into per-cpu log files) and
-{\tt xentrace\_format.py} (used to pretty-print trace data).
+xentrace\_cpusplit} (used to split trace data out into per-cpu log files) and
+{\tt xentrace\_format} (used to pretty-print trace data).
 
-For more information, see the {\tt xentrace} manual page.
+For more information, see the manual pages for {\tt xentrace},
+{\tt xentrace_format} and {\tt xentrace_cpusplit}.
 
 
 \chapter{Hypervisor calls}
