bitkeeper revision 1.793 (4051fa74uy1KmQPLgKFL65dSVykZ3Q)
interface.tex:
  tweaks

--- a/docs/interface.tex
+++ b/docs/interface.tex
@@ -436,7 +436,7 @@ xentrace\_cpusplit} (used to split trace data out into per-cpu log files) and
 {\tt xentrace\_format} (used to pretty-print trace data).
 
 For more information, see the manual pages for {\tt xentrace},
-{\tt xentrace_format} and {\tt xentrace_cpusplit}.
+{\tt xentrace\_format} and {\tt xentrace\_cpusplit}.
 
 
 \chapter{Hypervisor calls}
