bitkeeper revision 1.800 (4055ee59_zI1OKOsC2EKXBIYFm3OtA)
console_client.py, __init__.py, setup.py, Makefile:
  new file
Many files:
  New console-terminal client in xenctl.console_client Python package. New option to xc_dom_create (-c on cmdline or auto_console in defaults file) to automatically become a console client.
utils.py:
  Rename: tools/xc/py/XenoUtil.py -> tools/xenctl/lib/utils.py

--- a/tools/examples/README
+++ b/tools/examples/README
@@ -5,7 +5,7 @@ This directory contains a set of example scripts for common Xen operations.
 For many operations you will either be able to use these scripts directly, or
 incorporate code from them into your own scripts.
 
-The Xc and XenoUtil Python modules provide an API for accessing all this
+The Xc and xenctl.utils Python modules provide an API for accessing all this
 functionality - and more - from your own Python programs.  These libraries may
 contain features for which there aren't yet example scripts written for...
 
