--- a/README.CD
+++ b/README.CD
@@ -536,19 +536,24 @@ given direct access to the graphics card, so it may use it as a
 console. Other domains don't have ttyN consoles, so attempts to run a
 'mingetty' against them will fail, generating periodic warning
 messages from 'init' about services respawning too fast. They should
-work for domain0 just fine.
+work for domain0 just fine.  
+IMPORTANT: To prevent warning messages when running RH9 you'll need to
+remove ttyN from /etc/inittab for domains>0.  Due to a bug in the RH9
+/etc/rc.sysinit script #'ing the lines out of /etc/inittab won't work
+as it ignores the '#' and tries to access them anyway.
 
-In future, we may make the current 'xencons' accept input as well as
-output, so that a getty can be run against it. In the meantime, other
-domains don't have a console suitable for logging in on, so you'll
-have to run sshd and ssh in to them.
+Every Xenolinux instance owns a bidirectional 'virtual
+console'. Boot-time output can be directed to this console by
+specifying 'console=xencons0' as a boot parameter. It is also possible
+to log in via the virtual console. To do this, you must run a mingetty
+on the virtual console, which you can achieve as follows:
+ # mkdir -p /dev/xen
+ # mknod /dev/xen/cons c 4 123
+ # echo "c:2345:respawn:/sbin/mingetty --noclear xen/cons" >>/etc/inittab
+If you wish to permit root logins via the virtual console then you must
+also add 'xen/cons' to the list of trusted ttys in /etc/securetty.
 
-To prevent the warning messages you'll need to remove them from
-/etc/inittab for domains>0.  Due to a bug in the RH9 /etc/rc.sysinit
-script #'ing the lines out of /etc/inittab won't work as it ignores
-the '#' and tries to access them anyway.
-
-Also, because domains>0 don't have any privileged access at all,
+Note that, because domains>0 don't have any privileged access at all,
 certain commands in the default boot sequence will fail e.g. attempts
 to update the hwclock, change the console font, update the keytable
 map, start apmd (power management), or gpm (mouse cursor).  Either
